JS dosyasi disariya alindi

--- a/index.html
+++ b/index.html
@@ -119,24 +119,6 @@
         </div>
       </section>
     </main>
-    <script>
-      var isim = "Ahmet ";
-      var soyisim = "Yilmaz ";
-      var tamisim = isim + "" + soyisim;
-      console.log(tamisim, yas);
-      console.log("Merhaba Dünya");
-      var yas = 25 + 1;
-      var buYil = new Date().getFullYear();
-      console.log(buYil - yas);
-
-      //Aşağıdaki sayfa aşağı doğru çekildiğinde üst menüyü karaltmak için kullanılır
-      // function scrollFn() {
-      //   if (window.pageYOffset > 100) {
-      //     document.getElemenltById("menu").classList.add("menu-scroll");
-      //   } else {
-      //     document.getElementById("menu").classList.remove("menu-scroll");
-      //   }
-      // }
-    </script>
+    <script src="assets/js/index.js"></script>
   </body>
 </html>
